Add coveragereportgenerator