@@ -9,6 +9,8 @@
   - [`WORKSPACE`](#workspace)
   - [`.bazelrc`](#bazelrc)
   - [`coverage.sh`](#coveragesh)
+- [NOTES](#notes)
+  - [How do I know which `java_toolchain` is being used?](#how-do-i-know-which-java_toolchain-is-being-used)
 
 ## What is this?
 
@@ -142,4 +144,95 @@ Then you can view your report as follows:
 ```sh
 sh ./covbean.zip &
 open http://localhost:8080
+```
+
+# NOTES
+
+## How do I know which `java_toolchain` is being used?
+
+Try building a java target with `--toolchain_resolution_debug='@bazel_tools//tools/jdk:runtime_toolchain_type'`.
+
+```
+INFO: ToolchainResolution: Target platform @rules_nixpkgs_core//platforms:host: Selected execution platform @rules_nixpkgs_core//platforms:host, type @bazel_tools//tools/jdk:runtime_toolchain_type -> toolchain @remotejdk11_macos_aarch64//:jdk
+```
+
+`bazel query @remotejdk11_macos_aarch64//:jdk --output build` resolves to:
+
+```bazel
+java_runtime(
+    name = "jdk",
+    srcs = [
+        "@remotejdk11_macos_aarch64//:jdk-bin",
+        "@remotejdk11_macos_aarch64//:jdk-conf",
+        "@remotejdk11_macos_aarch64//:jdk-include",
+        "@remotejdk11_macos_aarch64//:jdk-lib",
+        "@remotejdk11_macos_aarch64//:jre-default",
+    ],
+)
+```
+
+We can also see this in `aquery --output text`, which prints out the raw action prototext:
+
+`bazel aquery --output=text //example/lib:hello-world`:
+
+```conf
+action 'Building example/lib/libhello-world.jar (1 source file)'
+  Mnemonic: Javac
+  Target: //example/lib:hello-world
+  Configuration: darwin_arm64-fastbuild
+  Execution platform: @local_config_platform//:host
+  ActionKey: 944e1415223fe32d4855f27591467048e6e6f7dd768beb5d8e4a7dbfb0c3b253
+  Inputs: [...]
+  Environment: [LC_CTYPE=en_US.UTF-8]
+  ExecutionInfo: {internal-inline-outputs: bazel-out/darwin_arm64-fastbuild/bin/example/lib/libhello-world.jdeps, supports-multiplex-workers: 1, supports-worker-cancellation: 1, supports-workers: 1}
+  Command Line: (exec external/remotejdk11_macos_aarch64/bin/java \
+    -XX:-CompactStrings \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED' \
+    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED' \
+    '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED' \
+    '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED' \
+    '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED' \
+    '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED' \
+    '--add-opens=java.base/java.nio=ALL-UNNAMED' \
+    '--add-opens=java.base/java.lang=ALL-UNNAMED' \
+    '-Dsun.io.useCanonCaches=false' \
+    -jar \
+    external/remote_java_tools/java_tools/JavaBuilder_deploy.jar \
+    --output \
+    bazel-out/darwin_arm64-fastbuild/bin/example/lib/libhello-world.jar \
+    --native_header_output \
+    bazel-out/darwin_arm64-fastbuild/bin/example/lib/libhello-world-native-header.jar \
+    --output_manifest_proto \
+    bazel-out/darwin_arm64-fastbuild/bin/example/lib/libhello-world.jar_manifest_proto \
+    --compress_jar \
+    --output_deps_proto \
+    bazel-out/darwin_arm64-fastbuild/bin/example/lib/libhello-world.jdeps \
+    --bootclasspath \
+    bazel-out/darwin_arm64-fastbuild/bin/external/bazel_tools/tools/jdk/platformclasspath.jar \
+    --sources \
+    example/lib/src/main/java/mypackage/Greeter.java \
+    --javacopts \
+    -source \
+    11 \
+    -target \
+    11 \
+    '-XDskipDuplicateBridges=true' \
+    '-XDcompilePolicy=simple' \
+    -g \
+    -parameters \
+    -Xep:ReturnValueIgnored:OFF \
+    -- \
+    --target_label \
+    //example/lib:hello-world \
+    --strict_java_deps \
+    ERROR \
+    --experimental_fix_deps_tool \
+    add_dep \
+    --reduce_classpath_mode \
+    JAVABUILDER_REDUCED)
 ```
